packages/eui/src/components/search_bar/query/query_parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Query: peg$parseQuery },
      peg$startRuleFunction  = peg$parseQuery,

      peg$c0 = function(clauses) { return clauses; },
      peg$c1 = function() { return []; },
      peg$c2 = function(head, clause) { return clause },
      peg$c3 = function(head, tail) {
        	return [ head, ...tail]
        },
      peg$c4 = "(",
      peg$c5 = peg$literalExpectation("(", false),
      peg$c6 = ")",
      peg$c7 = peg$literalExpectation(")", false),
      peg$c8 = function(head, tail) {
          return [head, ...tail];
        },
      peg$c9 = "-",
      peg$c10 = peg$literalExpectation("-", false),
      peg$c11 = function(group) { return AST.Group.mustNot(group) },
      peg$c12 = function(group) { return AST.Group.must(group) },
      peg$c13 = function(value) { return AST.Term.mustNot(value); },
      peg$c14 = function(value) { return AST.Term.must(value); },
      peg$c15 = function(flag) { return AST.Is.mustNot(flag); },
      peg$c16 = function(flag) { return AST.Is.must(flag); },
      peg$c17 = "is:",
      peg$c18 = peg$literalExpectation("is:", false),
      peg$c19 = function(flag) {
          validateFlag(flag, location(), ctx);
          return flag;
        },
      peg$c20 = peg$otherExpectation("field"),
      peg$c21 = function(fv) { return AST.Field.mustNot.eq(fv.field, fv.value); },
      peg$c22 = function(fv) { return AST.Field.mustNot.exact(fv.field, fv.value); },
      peg$c23 = function(fv) { return AST.Field.mustNot.gt(fv.field, fv.value); },
      peg$c24 = function(fv) { return AST.Field.mustNot.gte(fv.field, fv.value); },
      peg$c25 = function(fv) { return AST.Field.mustNot.lt(fv.field, fv.value); },
      peg$c26 = function(fv) { return AST.Field.mustNot.lte(fv.field, fv.value); },
      peg$c27 = function(fv) { return AST.Field.must.eq(fv.field, fv.value); },
      peg$c28 = function(fv) { return AST.Field.must.exact(fv.field, fv.value); },
      peg$c29 = function(fv) { return AST.Field.must.gt(fv.field, fv.value); },
      peg$c30 = function(fv) { return AST.Field.must.gte(fv.field, fv.value); },
      peg$c31 = function(fv) { return AST.Field.must.lt(fv.field, fv.value); },
      peg$c32 = function(fv) { return AST.Field.must.lte(fv.field, fv.value); },
      peg$c33 = ":",
      peg$c34 = peg$literalExpectation(":", false),
      peg$c35 = function(field, valueExpression) {
        	return {field, value: resolveFieldValue(field, valueExpression, ctx) };
        },
      peg$c36 = "=",
      peg$c37 = peg$literalExpectation("=", false),
      peg$c38 = ">",
      peg$c39 = peg$literalExpectation(">", false),
      peg$c40 = function(field, valueExpression) {
          return {field, value: resolveFieldValue(field, valueExpression, ctx)};
        },
      peg$c41 = ">=",
      peg$c42 = peg$literalExpectation(">=", false),
      peg$c43 = "<",
      peg$c44 = peg$literalExpectation("<", false),
      peg$c45 = "<=",
      peg$c46 = peg$literalExpectation("<=", false),
      peg$c47 = peg$otherExpectation("flag name"),
      peg$c48 = peg$otherExpectation("field name"),
      peg$c49 = function(id) { return !hasRecognizedFields || recognizedFields.includes(id); },
      peg$c50 = function(id) { return id; },
      peg$c51 = function() { return unescapeValue(text()); },
      peg$c52 = /^[\-_]/,
      peg$c53 = peg$classExpectation(["-", "_"], false, false),
      peg$c54 = peg$otherExpectation("field value"),
      peg$c55 = peg$otherExpectation("term"),
      peg$c56 = function(value) { return value.expression; },
      peg$c57 = function(head, value) { return value; },
      peg$c58 = function(head, tail) { return [ head, ...tail ]; },
      peg$c59 = "\"",
      peg$c60 = peg$literalExpectation("\"", false),
      peg$c61 = function() { return unescapePhraseValue(text()); },
      peg$c62 = function(phrase) { return Exp.string(phrase, location()); },
      peg$c63 = /^[^\\\\" ]/,
      peg$c64 = peg$classExpectation(["\\", "\\", "\"", " "], true, false),
      peg$c65 = "\\\\",
      peg$c66 = peg$literalExpectation("\\\\", false),
      peg$c67 = peg$anyExpectation(),
      peg$c68 = function() {
            if (text().toLowerCase() === 'or') {
              error(
                'To use OR in a text search, put it inside quotes: "or". To ' +
                'perform a logical OR, enclose the words in parenthesis: (foo:bar or bar).'
              );
            }
            return Exp.string(unescapeValue(text()), location());
          },
      peg$c69 = /^[\-_*:\/@]/,
      peg$c70 = peg$classExpectation(["-", "_", "*", ":", "/", "@"], false, false),
      peg$c71 = /^[\xC0-\uFFFF]/,
      peg$c72 = peg$classExpectation([["\xC0", "\uFFFF"]], false, false),
      peg$c73 = /^[\-:\\\\()]/,
      peg$c74 = peg$classExpectation(["-", ":", "\\", "\\", "(", ")"], false, false),
      peg$c75 = /^[oO]/,
      peg$c76 = peg$classExpectation(["o", "O"], false, false),
      peg$c77 = /^[rR]/,
      peg$c78 = peg$classExpectation(["r", "R"], false, false),
      peg$c79 = function(bool) { return bool; },
      peg$c80 = /^[tT]/,
      peg$c81 = peg$classExpectation(["t", "T"], false, false),
      peg$c82 = /^[uU]/,
      peg$c83 = peg$classExpectation(["u", "U"], false, false),
      peg$c84 = /^[eE]/,
      peg$c85 = peg$classExpectation(["e", "E"], false, false),
      peg$c86 = function() { return Exp.boolean(text(), location()); },
      peg$c87 = /^[fF]/,
      peg$c88 = peg$classExpectation(["f", "F"], false, false),
      peg$c89 = /^[aA]/,
      peg$c90 = peg$classExpectation(["a", "A"], false, false),
      peg$c91 = /^[lL]/,
      peg$c92 = peg$classExpectation(["l", "L"], false, false),
      peg$c93 = /^[sS]/,
      peg$c94 = peg$classExpectation(["s", "S"], false, false),
      peg$c95 = /^[yY]/,
      peg$c96 = peg$classExpectation(["y", "Y"], false, false),
      peg$c97 = /^[nN]/,
      peg$c98 = peg$classExpectation(["n", "N"], false, false),
      peg$c99 = /^[\\\-]/,
      peg$c100 = peg$classExpectation(["\\", "-"], false, false),
      peg$c101 = /^[0-9]/,
      peg$c102 = peg$classExpectation([["0", "9"]], false, false),
      peg$c103 = ".",
      peg$c104 = peg$literalExpectation(".", false),
      peg$c105 = function() { return Exp.number(text(), location()); },
      peg$c106 = function(num) { return num; },
      peg$c107 = "'",
      peg$c108 = peg$literalExpectation("'", false),
      peg$c109 = function() { return text(); },
      peg$c110 = function(expression) {
       	return Exp.date(expression, location());
       },
      peg$c111 = peg$otherExpectation("alpha numeric"),
      peg$c112 = /^[a-zA-Z0-9\\.]/,
      peg$c113 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "\\", "."], false, false),
      peg$c114 = peg$otherExpectation("whitespace"),
      peg$c115 = /^[ \\t\\n\\r]/,
      peg$c116 = peg$classExpectation([" ", "\\", "t", "\\", "n", "\\", "r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseQuery() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseClauses();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsespace();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseClauses() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parsespace();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseClause();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parsespace();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseClause();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s4;
            s5 = peg$c2(s2, s6);
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parsespace();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseClause();
            if (s6 !== peg$FAILED) {
              peg$savedPos = s4;
              s5 = peg$c2(s2, s6);
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsespace();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c3(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseClause() {
    var s0;

    s0 = peg$parseGroupClause();
    if (s0 === peg$FAILED) {
      s0 = peg$parseIsClause();
      if (s0 === peg$FAILED) {
        s0 = peg$parseFieldClause();
        if (s0 === peg$FAILED) {
          s0 = peg$parseTermClause();
        }
      }
    }

    return s0;
  }

  function peg$parseSubGroupClause() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c4;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseClause();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parsespace();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parseorWord();
          if (s6 !== peg$FAILED) {
            s7 = peg$parsespace();
            if (s7 === peg$FAILED) {
              s7 = null;
            }
            if (s7 !== peg$FAILED) {
              s8 = peg$parseClause();
              if (s8 !== peg$FAILED) {
                peg$savedPos = s4;
                s5 = peg$c2(s2, s8);
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parsespace();
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parseorWord();
            if (s6 !== peg$FAILED) {
              s7 = peg$parsespace();
              if (s7 === peg$FAILED) {
                s7 = null;
              }
              if (s7 !== peg$FAILED) {
                s8 = peg$parseClause();
                if (s8 !== peg$FAILED) {
                  peg$savedPos = s4;
                  s5 = peg$c2(s2, s8);
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s4 = peg$c6;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c7); }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c8(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGroupClause() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsespace();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 45) {
        s2 = peg$c9;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseSubGroupClause();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c11(s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsespace();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSubGroupClause();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c12(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseTermClause() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsespace();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 45) {
        s2 = peg$c9;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsetermValue();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c13(s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsespace();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsetermValue();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c14(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseIsClause() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsespace();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 45) {
        s2 = peg$c9;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIsFlag();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c15(s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsespace();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseIsFlag();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c16(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseIsFlag() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c17) {
      s1 = peg$c17;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseflagName();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c19(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFieldClause() {
    var s0, s1, s2, s3;
